[tool.poetry]
name = "roberts-sol-tracker-bot"
version = "0.1.0"
description = "Solana Wallet Telegram Bot"
authors = ["Dein Name <deine@email.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
aiogram = "2.25.2"
httpx = "0.24.0"
supabase = "1.1.1"
supafunc = "0.2.3"
fastapi = "0.103.2"
apscheduler = "3.10.4"
uvicorn = "0.24.0"
pydantic = "1.10.13"
typing-extensions = "4.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
